# ibex-1d

./: .gitignore  1d-ibex.py  LICENSE.txt  README.md  ibex_1d.py  pyproject.toml  setup.py
.github/workflows/: publish_package.yml
